--- a/src/main/resources/templates/Detailtask.html
+++ b/src/main/resources/templates/Detailtask.html
@@ -9,6 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
+<div th:replace="fragments/nav/Slidebar :: slidebar"></div>
+
+<div class="fixed top-4 right-4 z-50">
+    <div th:replace="fragments/alert/succes :: SuccessAlert"></div>
+</div>
+<div class="fixed top-4 right-4 z-50">
+    <div th:replace="fragments/alert/error :: ErrorAlert"></div>
+</div>
+
+
+<div class="m-6 px-32">
+
 <div class="bg-white p-8 rounded-lg shadow-lg w-3/6" data-task-id="${taskforEdit.id}">
     <h2 class="text-xl font-semibold mb-4">Detalles Tarea <span th:text="${taskforEdit.id}"></span></h2>
     <form class="space-y-4">
@@ -40,13 +52,11 @@
         <div class="flex space-x-4">
             <!-- Primer select: Responsable -->
             <div class="w-1/2">
-                <label for="user" class="block text-gray-700">Responsable</label>
-                <select id="user" name="user" class="w-full p-2 border border-gray-300 rounded">
+                <label for="user" class="block text-gray-700 font-semibold mb-2">Responsable</label>
+                <select id="user" name="user" class="w-full p-3 border-2 border-gray-300 rounded-lg bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm appearance-none h-40" multiple>
                     <th:block th:each="user : ${users}">
-                        <option th:value="${user.username}" th:text="${user.username}"></option>
+                        <option th:value="${user.id}" th:text="${user.username}"></option>
                     </th:block>
-                    <!-- Default selected option -->
-                    <option th:value="${taskforEdit.responsable}" th:text="${taskforEdit.responsable}"></option>
                 </select>
             </div>
 
@@ -137,5 +147,6 @@
     });
 </script>
 
+</div>
 </body>
 </html>
