--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -1,11 +1,10 @@
 <!-- resources/templates/fragments/modal.html -->
 
 <div th:fragment="taskModal">
-
   <!-- Modal -->
   <div id="taskModal"
        class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
-    <div class="bg-white p-8 rounded-lg w-96">
+    <div class="bg-white p-8 rounded-lg w-1/2">
       <h2 class="text-xl font-semibold mb-4">Agregar Tarea</h2>
       <form  id="modal-task" class="space-y-4">
         <!-- Nombre -->
@@ -27,6 +26,9 @@
 
           <!-- Segundo input: Proyecto -->
           <div class="w-1/2">
+
+
+
             <label for="horas" class="block text-gray-700">Proyecto</label>
             <input type="text" id="proyect" name="proyect" class="w-full p-2 border border-gray-300 rounded" th:value="${filtro}" disabled>
           </div>
@@ -35,25 +37,27 @@
         <div class="flex space-x-4">
           <!-- Primer select: Responsable -->
           <div class="w-1/2">
-            <label for="user" class="block text-gray-700">Responsable</label>
-            <select id="user" name="user" class="w-full p-2 border border-gray-300 rounded">
+            <label for="user" class="block text-gray-700 font-semibold mb-2">Responsable</label>
+            <select id="user" name="user" class="w-full p-3 border-2 border-gray-300 rounded-lg bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm appearance-none h-40" multiple required>
               <th:block th:each="user : ${users}">
-                <option th:value="${user.username}" th:text="${user.username}"></option>
+                <option th:value="${user.id}" th:text="${user.username}"></option>
               </th:block>
             </select>
           </div>
 
+
+
           <!-- Segundo input: Horas Estimadas -->
           <div class="w-1/2">
             <label for="horas" class="block text-gray-700">Horas Estimadas</label>
-            <input type="number" id="horas" name="horas" class="w-full p-2 border border-gray-300 rounded" required>
+            <input type="number" id="horas" name="horas" class="w-full p-2 border border-gray-300 rounded" step="0.01" required>
           </div>
         </div>
 
         <!-- Descripción -->
         <div>
           <label for="description" class="block text-gray-700">Descripción</label>
-          <textarea id="description" name="description" rows="4" class="w-full p-2 border border-gray-300 rounded" required></textarea>
+          <textarea id="description" name="description" rows="4" class="w-full p-2 border border-gray-300 rounded"></textarea>
         </div>
 
         <!-- Botones -->
