--- a/src/main/resources/templates/Detailtask.html
+++ b/src/main/resources/templates/Detailtask.html
@@ -4,6 +4,8 @@
     <title>Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tom-select@2.3.0/dist/css/tom-select.css">
+    <script src="https://cdn.jsdelivr.net/npm/tom-select@2.3.0/dist/js/tom-select.complete.min.js"></script>
 
     <link th:href="@{/main.css}" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
@@ -21,14 +23,22 @@
 
 <div class="m-6 px-32">
 
-<div class="bg-white p-8 rounded-lg shadow-lg w-3/6" data-task-id="${taskforEdit.id}">
+<div class="bg-white p-8 rounded-lg pt-8" data-task-id="${taskforEdit.id}">
     <h2 class="text-xl font-semibold mb-4">Detalles Tarea <span th:text="${taskforEdit.id}"></span></h2>
     <form class="space-y-4">
         <!-- Nombre -->
         <div>
             <label for="name" class="block text-gray-700">Nombre de la Tarea</label>
-            <input type="text" id="name" name="name" class="w-full p-2 border border-gray-300 rounded"
-                   th:value="${taskforEdit.name}" required>
+<!--            <input type="text" id="name" name="name" class="w-full p-2 border border-gray-300 rounded"-->
+<!--                   th:value="${taskforEdit.name}" required>-->
+            <textarea id="name" name="name"
+                      class="w-full p-2 border border-gray-300 rounded resize-none h-16"
+                      rows="1" oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
+                      th:text="${taskforEdit.name}"
+                      required disabled>
+
+                </textarea>
+
         </div>
 
         <div class="flex space-x-4">
@@ -51,9 +61,18 @@
 
         <div class="flex space-x-4">
             <!-- Primer select: Responsable -->
+<!--            <div class="w-1/2">-->
+<!--                <label for="user" class="block text-gray-700 font-semibold mb-2">Responsable</label>-->
+<!--                <select id="user" name="user" class="w-full p-3 border-2 border-gray-300 rounded-lg bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm appearance-none h-40" multiple>-->
+<!--                    <th:block th:each="user : ${users}">-->
+<!--                        <option th:value="${user.id}" th:text="${user.username}"></option>-->
+<!--                    </th:block>-->
+<!--                </select>-->
+<!--            </div>-->
             <div class="w-1/2">
-                <label for="user" class="block text-gray-700 font-semibold mb-2">Responsable</label>
-                <select id="user" name="user" class="w-full p-3 border-2 border-gray-300 rounded-lg bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm appearance-none h-40" multiple>
+                <label for="user" class="block text-gray-700">Responsable</label>
+                <select id="user" name="user" multiple class="w-full  rounded-lg bg-gray-50 focus:ring-blue-500 shadow-sm appearance-none"
+                        data-tom-select required disabled>
                     <th:block th:each="user : ${users}">
                         <option th:value="${user.id}" th:text="${user.username}"></option>
                     </th:block>
@@ -81,6 +100,14 @@
     </form>
 </div>
 <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        new TomSelect("#user", {
+            plugins: ["checkbox_options"],
+            hideSelected: false,
+            persist: false
+        });
+    });
+
     // Obteniendo el ID de la tarea desde el atributo data
     const taskId = document.querySelector('[data-task-id]').dataset.taskId;
 
