--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -27,15 +27,13 @@
           <!-- Segundo input: Proyecto -->
           <div class="w-1/2">
 
-
-
             <label for="horas" class="block text-gray-700">Proyecto</label>
             <input type="text" id="proyect" name="proyect" class="w-full p-2 border border-gray-300 rounded" th:value="${filtro}" disabled>
           </div>
         </div>
 
         <div class="flex space-x-4">
-          <!-- Primer select: Responsable -->
+          <!-- Primer select: Responsable
           <div class="w-1/2">
             <label for="user" class="block text-gray-700 font-semibold mb-2">Responsable</label>
             <select id="user" name="user" class="w-full p-3 border-2 border-gray-300 rounded-lg bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm appearance-none h-40" multiple required>
@@ -44,7 +42,16 @@
               </th:block>
             </select>
           </div>
-
+          -->
+          <div class="w-1/2">
+            <label for="user" class="block text-gray-700">Responsable</label>
+            <select id="user" name="user" multiple class="w-full  rounded-lg bg-gray-50 focus:ring-blue-500 shadow-sm appearance-none"
+                    data-tom-select required>
+              <th:block th:each="user : ${users}">
+                <option th:value="${user.id}" th:text="${user.username}"></option>
+              </th:block>
+            </select>
+          </div>
 
 
           <!-- Segundo input: Horas Estimadas -->
