--- a/src/main/resources/templates/kanban.html
+++ b/src/main/resources/templates/kanban.html
@@ -21,21 +21,21 @@
   <div th:replace="fragments/alert/error :: ErrorAlert"></div>
 </div>
 
-<div class="m-6 px-32">
+<div class="m-6 mr-0 pl-12 lg:pl-32 sm:pl-24">
 
   <div class="container mx-auto p-4">
 
-    <div class="flex gap-8">
+    <div class="flex flex-nowrap gap-8 overflow-y-auto min-w-2xl">
       <!-- Columna Pendiente -->
-      <div class="w-1/2">
-        <h2 class="text-2xl font-semibold mb-4">Pendiente</h2>
+      <div class="w-full md:w-1/2 "> <!-- Cambiar w-full en pantallas pequeñas -->
+        <h2 class="text-xl lg:text-2xl font-semibold">Pendiente</h2>
 
-        <div th:each="task : ${tasks}" th:if="${task.status == 'pendiente' and task.username==user.username}" class="bg-gray-100 shadow-xl rounded-xl p-4 w-72 m-5">
+        <div th:each="task : ${tasks}" th:if="${task.status == 'pendiente' and task.username==user.username}" class="bg-gray-100 shadow-xl rounded-xl p-4 w-52 lg:w-72 m-5">
           <div class="flex justify-between items-center mb-2">
-            <span class="text-sm font-semibold text-gray-700" th:text="${task.creationDate}">Tarea Pendiente</span>
+            <span class="text-sm font-semibold text-gray-700" th:text="${#dates.format(task.creationDate, 'dd/MM/yyyy')}">Tarea Pendiente</span>
             <span class="text-xs bg-blue-100 text-blue-600 px-2 py-1 rounded-full" th:text="${task.status}">En Progreso</span>
           </div>
-          <h3 class="text-lg font-semibold text-gray-900" th:text="${task.name}">Implementar API de usuarios</h3>
+          <h3 class="text-l lg:text-lg font-semibold text-gray-900" th:text="${task.name}">Implementar API de usuarios</h3>
           <p class="text-sm text-gray-600 mt-1" th:text="${task.description}">Desarrollar los endpoints necesarios para la autenticación y gestión de usuarios.</p>
           <div class="flex items-center mt-4">
             <img class="w-8 h-8 rounded-full border border-gray-300" src="https://i.pravatar.cc/40" alt="Avatar">
@@ -45,23 +45,24 @@
       </div>
 
       <!-- Columna Completa -->
-      <div class="w-1/2">
-        <h2 class="text-2xl font-semibold mb-4" >Completa</h2>
-        <div th:each="task : ${tasks}" th:if="${task.status == 'Completada' and task.username==user.username}" class="bg-white shadow-lg rounded-xl p-4 w-72">
+      <div class="w-full md:w-1/2 "> <!-- Cambiar w-full en pantallas pequeñas -->
+        <h2 class="text-xl lg:text-2xl font-semibold">Completada</h2>
+
+        <div th:each="task : ${tasks}" th:if="${task.status == 'Completada' and task.username==user.username}" class="bg-gray-100 shadow-xl rounded-xl p-4 w-52 lg:w-72 m-5">
           <div class="flex justify-between items-center mb-2">
-            <span class="text-sm font-semibold text-gray-700" th:text="${task.creationDate}">Tarea Pendiente</span>
+            <span class="text-sm font-semibold text-gray-700" th:text="${#dates.format(task.creationDate, 'dd/MM/yyyy')}">Tarea Pendiente</span>
             <span class="text-xs bg-blue-100 text-blue-600 px-2 py-1 rounded-full" th:text="${task.status}">En Progreso</span>
           </div>
-          <h3 class="text-lg font-semibold text-gray-900" th:text="${task.name}">Implementar API de usuarios</h3>
+          <h3 class="text-l lg:text-lg font-semibold text-gray-900 " th:text="${task.name}">Implementar API de usuarios</h3>
           <p class="text-sm text-gray-600 mt-1" th:text="${task.description}">Desarrollar los endpoints necesarios para la autenticación y gestión de usuarios.</p>
           <div class="flex items-center mt-4">
             <img class="w-8 h-8 rounded-full border border-gray-300" src="https://i.pravatar.cc/40" alt="Avatar">
             <span class="text-sm text-gray-500 ml-2" th:text="'Asignado a '+${task.username}">Asignado a Juan Pérez</span>
           </div>
         </div>
-
       </div>
     </div>
+
 
 
   </div>
